--- a/Drawing JD Tree/drawing.html
+++ b/Drawing JD Tree/drawing.html
@@ -28,18 +28,19 @@
 
 <div class='container' id='right'>
     <div id='info'>
-        <div id='E'>
-            <p>Spurious Tuples: </p>
-            <p id='SpuriousTuples'></p>
+
+        <div id='J'>
+            <p>J-Measure (J):</p>
+            <p id='JMeasure'>0</p>
         </div>
         <div id='S'>
-            <p>Saving in Storage: </p>
-            <p id='saving'></p>
+            <p>Saving in Storage (S): </p>
+            <p id='saving'>0</p>
         </div>
-        <!--        <div id='J'>-->
-        <!--            <p>J-Measure: </p>-->
-        <!--            <p id='JMeasure'></p>-->
-        <!--        </div>-->
+        <div id='E'>
+            <p>Spurious Tuples (E): </p>
+            <p id='SpuriousTuples'>0%</p>
+        </div>
     </div>
     <div id='tree'></div>
     <div id='buttons'>
