--- a/Drawing JD Tree/drawing.html
+++ b/Drawing JD Tree/drawing.html
@@ -13,6 +13,7 @@
     <script src='node_modules/treant-js/vendor/raphael.js'></script>
     <script src='node_modules/treant-js/Treant.js'></script>
 
+
     <link href='components/drawing1.css' rel='stylesheet' type='text/css' />
     <link href='components/tree.css' rel='stylesheet' type='text/css' />
     <link href='node_modules/treant-js/Treant.css' rel='stylesheet' type='text/css' />
@@ -27,39 +28,36 @@
 
 
 <div class='container' id='right'>
-    <div id='info'>
-
-        <div id='J'>
-            <p>J-Measure (J):</p>
-            <p id='JMeasure'>0</p>
-        </div>
-        <div id='S'>
-            <p>Saving in Storage (S): </p>
-            <p id='saving'>0</p>
-        </div>
-        <div id='E'>
-            <p>Spurious Tuples (E): </p>
-            <p id='SpuriousTuples'>0%</p>
-        </div>
-    </div>
     <div id='tree'></div>
     <div id='buttons'>
         <button id='change_layout' onclick='
-            chart.destroy()
             chart_config = chart_config === tree_config ? plan_config : tree_config
-            chart = new Treant(chart_config)
-            hoverAction()
-            mergeAction()
+            refresh()
         '>change the layout
         </button>
-        <button id='refresh' onclick="
-            chart.destroy();
-            chart = new Treant(chart_config)
-            hoverAction()
-            mergeAction()
-        ">refresh
+        <button id='refresh' onclick='
+            refresh()
+        '>refresh
         </button>
     </div>
+</div>
+
+<div class='container' id='info'>
+
+    <div id='J'>
+        <p>J-Measure (J):</p>
+        <p id='JMeasure'>0</p>
+    </div>
+    <div id='S'>
+        <p>Saving in Storage (S): </p>
+        <p id='saving'>0</p>
+    </div>
+    <div id='E'>
+        <p>Spurious Tuples (E): </p>
+        <p id='SpuriousTuples'>0%</p>
+    </div>
+    <br>
+    <div id='legend'></div>
 </div>
 
 <script>
