with attribute names

--- a/Drawing JD Tree/drawing.html
+++ b/Drawing JD Tree/drawing.html
@@ -8,8 +8,8 @@
 
     <script>window.$ = window.jQuery = require('jquery');</script>
     <script src='node_modules/jquery/dist/jquery.slim.min.js'></script>
-    <script src='components/tree.js'></script>
-    <script src='./components/drawing.js'></script>
+    <script src='./components/tree.js'></script>
+    <script src='components/drawing.js'></script>
     <script src='node_modules/treant-js/vendor/raphael.js'></script>
     <script src='node_modules/treant-js/Treant.js'></script>
 
@@ -59,9 +59,5 @@
     <br>
     <div id='legend'></div>
 </div>
-
-<script>
-    let chart = new Treant(chart_config)
-</script>
 </body>
 </html>
